--- a/MasterFixWeb/Views/Demoes/Index.cshtml
+++ b/MasterFixWeb/Views/Demoes/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MasterFixWeb.Entities.Demo>
+﻿@model IEnumerable<MasterFixWeb.DataContext.Demo>
 
 @{
     ViewData["Title"] = "Index";
