--- a/MasterFixWeb/Views/Entidades/Index.cshtml
+++ b/MasterFixWeb/Views/Entidades/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<MasterFixWeb.DataEntities.Entidade>
-
-@{
+﻿@{
     ViewData["Title"] = "Index";
 }
 
@@ -10,187 +8,12 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-<table class="table table-hover table-bordered table-striped table-responsive" style="max-height:500px;">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CnpjCpf)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InscRg)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cidade)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Uf)
-            </th>
-            <th>
-                Telefone
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr onclick="modal(@Html.DisplayFor(modelItem => item.Id))">
-                <td class="col-lg-1" style="white-space:nowrap; overflow:hidden; text-overflow: ellipsis; max-width:250px;">
-                    @Html.DisplayFor(modelItem => item.Nome)
-                </td>
-                <td class="col-lg-1" style="white-space:nowrap; overflow:hidden; text-overflow:clip">
-                    @Html.DisplayFor(modelItem => item.CnpjCpf)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.InscRg)
-                </td>
-                <td class="col-lg-1" style="white-space:nowrap; overflow:hidden; text-overflow:clip">
-                    @Html.DisplayFor(modelItem => item.Cidade)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Uf)
-                </td>
-                <td class="col-lg-1" style="white-space:nowrap; overflow:hidden; text-overflow:clip">
-                    @Html.DisplayFor(modelItem => item.Fone1)
-                </td>
-                @*<td class="col-lg-1" style="white-space:nowrap; overflow:hidden; text-overflow:clip">
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>*@
-            </tr>
-        }
-    </tbody>
-</table>
+@await Html.PartialAsync("_listaEntidades")
 
-<div class="modal fade" id="EntidadeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Entidade</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-            <form id="editForm" asp-action="Edit">
 
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" name="Id" />
-            <div class="form-row">
-                <div class="form-group col-md-4">
-                <label name="Nome" class="control-label">Nome</label>
-                <input name="Nome" id="Nome" class="form-control form-control-sm" />
-                <span data-valmsg-for="Nome" class="text-danger"></span>
-                </div>
-                <div class="form-group col-md-2">
-                <label name="InscRg" class="control-label">Inscrição Estadual - Rg</label>
-                <input name="InscRg" class="form-control form-control-sm" />
-                <span data-valmsg-for="InscRg" class="text-danger"></span>
-                </div>
-                <div class="form-group col-md-2">
-                <label name="CnpjCpf" class="control-label">Cnpj - Cpf</label>
-                <input name="CnpjCpf" class="form-control form-control-sm" />
-                <span data-valmsg-for="CnpjCpf" class="text-danger"></span>
-                </div>
-                <div class="form-group col-md-4">
-                <label name="Email" class="control-label">Email</label>
-                <input name="Email" class="form-control form-control-sm" />
-                <span data-valmsg-for="Email" class="text-danger"></span>
-                </div>
-            </div>
+@await Html.PartialAsync("_editEntidade")
 
-            <div class="form-row">
-                <div class="form-group col-md-2">
-                    <label name="Pais" class="control-label">País</label>
-                    <input name="Pais" class="form-control form-control-sm" />
-                    <span data-valmsg-for="Pais" class="text-danger"></span>
-                </div>
-                <div class="form-group col-md-2">
-                    <label name="Cidade" class="control-label">Cidade</label>
-                    <input name="Cidade" class="form-control form-control-sm" />
-                    <span data-valmsg-for="Cidade" class="text-danger"></span>
-                </div>
-                <div class="form-group col-md-1">
-                    <label name="Uf" class="control-label">Uf</label>
-                    <input name="Uf" class="form-control form-control-sm" />
-                    <span data-valmsg-for="Uf" class="text-danger"></span>
-                </div>
 
-                <div class="form-group col-md-2">
-                    <label name="Bairro" class="control-label">Bairro</label>
-                    <input name="Bairro" class="form-control form-control-sm" />
-                    <span data-valmsg-for="Bairro" class="text-danger"></span>
-                </div>
-            <div class="form-group col-md-3">
-                <label name="Cep" class="control-label">CEP</label>
-                <input name="Cep" class="form-control form-control-sm" />
-                <span data-valmsg-for="Cep" class="text-danger"></span>
-            </div>
-            </div>
-
-            <div class="form-row">
-                <div class="form-group col-md-4">
-                    <label name="Rua" class="control-label">Rua</label>
-                    <input name="Rua" class="form-control form-control-sm" />
-                    <span data-valmsg-for="Rua" class="text-danger"></span>
-                </div>
-                <div class="form-group col-md-1">
-                    <label name="Numero" class="control-label">Numero</label>
-                    <input name="Numero" class="form-control form-control-sm" />
-                    <span data-valmsg-for="Numero" class="text-danger"></span>
-                </div>
-            <div class="form-group col-md-3">
-                <label name="Complemento" class="control-label">Complemento</label>
-                <input name="Complemento" class="form-control form-control-sm" />
-                <span data-valmsg-for="Complemento" class="text-danger"></span>
-            </div>
-            </div>
-            <div class="form-row">
-            <div class="form-group col-md-2">
-                <label name="Fone1" class="control-label">Fone</label>
-                <input name="Fone1" class="form-control form-control-sm" />
-                <span data-valmsg-for="Fone1" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-2">
-                <label name="Fone2" class="control-label">Fone</label>
-                <input name="Fone2" class="form-control form-control-sm" />
-                <span data-valmsg-for="Fone2" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-2">
-                <label name="Contato" class="control-label">Contato</label>
-                <input name="Contato" class="form-control form-control-sm" />
-                <span data-valmsg-for="Contato" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-2">
-                <label name="ContatoFone" class="control-label">Contato Fone</label>
-                <input name="ContatoFone" class="form-control form-control-sm" />
-                <span data-valmsg-for="ContatoFone" class="text-danger"></span>
-            </div>
-            <div class="form-group col-md-4">
-                <label name="Homepage" class="control-label">Homepage</label>
-                <input name="Homepage" class="form-control form-control-sm" />
-                <span data-valmsg-for="Homepage" class="text-danger"></span>
-            </div>
-            </div>
-
-            <div class="form-group">
-                <label name="Obs" class="control-label">Obs</label>
-                <input name="Obs" class="form-control form-control-sm" />
-                <span data-valmsg-for="Obs" class="text-danger"></span>
-            </div>
-                <button onclick="edit()" class="btn btn-success">Save</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                
-                <button onclick="del()" value="Delete" type="button" class="btn btn-danger">Delete</button>
-            </form>
-            </div>
-        </div>
-    </div>
-</div>
-    </div>
 
 <script type="text/javascript">
 function del(){
@@ -214,12 +37,13 @@ function edit(){
            url: "/entidades/edit",
            type: "POST",
            data: $('#editForm').serialize(), // serializes the form's elements.
-           async: false,
+           async: true,
            success: function(result)
            {
+               console.log(result);
                 $('#EntidadeModal').modal('hide');
                     setTimeout(function(){
-                        $('body').html(result);
+                        $('div[name=_partialEntidade]').replaceWith(result);
                     }, 150);
             }      
          });
