--- a/MasterFixWeb/Views/Entidades/_listaEntidades.cshtml
+++ b/MasterFixWeb/Views/Entidades/_listaEntidades.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MasterFixWeb.DataEntities.Entidade>
+﻿@model IEnumerable<MasterFixWeb.Models.Entidade>
 
 <div name="_partialEntidade">
 <table class="table table-hover table-bordered table-striped table-responsive" style="max-height:500px;">
@@ -46,11 +46,6 @@
                 <td class="col-lg-1" style="white-space:nowrap; overflow:hidden; text-overflow:clip">
                     @Html.DisplayFor(modelItem => item.Fone1)
                 </td>
-                @*<td class="col-lg-1" style="white-space:nowrap; overflow:hidden; text-overflow:clip">
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>*@
             </tr>
         }
     </tbody>
