--- a/MasterFixWeb/Views/Shared/_Layout.cshtml
+++ b/MasterFixWeb/Views/Shared/_Layout.cshtml
@@ -6,44 +6,45 @@
     <title>@ViewData["Title"] - MasterFixWeb</title>
 
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
         <style>
-    ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-}
+                    ::-webkit-scrollbar {
+                    width: 8px;
+                    height: 8px;
+                }
 
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 8px;
-}
- 
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: grey; 
-    border-radius: 8px;
-}
+                ::-webkit-scrollbar-track {
+                    box-shadow: inset 0 0 5px grey; 
+                    border-radius: 8px;
+                }
+                
+                /* Handle */
+                ::-webkit-scrollbar-thumb {
+                    background: grey; 
+                    border-radius: 8px;
+                }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-    background: grey; 
-}
+                /* Handle on hover */
+                ::-webkit-scrollbar-thumb:hover {
+                    background: grey; 
+                }
     </style>
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
         <div class="container">
-        <a asp-area="" asp-controller="Entidades" asp-action="Index" class="navbar-brand">MasterFixWeb</a>
+        <a href="#" class="navbar-brand">MasterFixWeb</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <div class="dropdown">
             <button class="btn btn-sm btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Entidades
+                Cadastros
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" asp-area="" asp-controller="Entidades" asp-action="Index">Home</a>
+                <a class="dropdown-item" href="#" onclick="loadPages('entidades/index')">Entidades</a>
             </div>
             </div>
   </div>
@@ -53,7 +54,9 @@
     <partial name="_CookieConsentPartial" />
 
     <div class="container body-content">
+        <div name="partialBody">
         @RenderBody()
+        </div>
         <br>
         <hr />
         <footer>
@@ -62,11 +65,25 @@
     </div>
 
     <script src="~/lib/jquery/dist/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation/dist/additional-methods.min.js" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
- 
-
     @RenderSection("Scripts", required: false)
-</body>
 
+    <script>
+function loadPages(rota){
+    $.ajax({
+           url: rota,
+           type: "POST",
+           async: true,
+           success: function(result)
+           {
+                $('div[name=partialBody]').replaceWith(result);
+            }      
+         });
+}
+</script>
+</body>
 </html>
