Inserido hasConversion para blob field

--- a/MasterFixWeb/Views/Entidades/_editEntidade.cshtml
+++ b/MasterFixWeb/Views/Entidades/_editEntidade.cshtml
@@ -124,9 +124,9 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="getObs" class="control-label">Obs</label>
-                <input asp-for="getObs" class="form-control form-control-sm" />
-                <span asp-validation-for="getObs" class="text-danger"></span>
+                <label asp-for="Obs" class="control-label">Obs</label>
+                <input asp-for="Obs" class="form-control form-control-sm" />
+                <span asp-validation-for="Obs" class="text-danger"></span>
             </div>
             </form>
             </div>
