--- a/MasterFixWeb/Views/Entidades/_editEntidade.cshtml
+++ b/MasterFixWeb/Views/Entidades/_editEntidade.cshtml
@@ -138,3 +138,40 @@
         </div>
     </div>
     </div>
+
+    <script type="text/javascript">
+function del(){
+    $.ajax({
+           url: "/entidades/Delete",
+           type: "POST",
+           data: $('#editForm').serialize(),
+           async: false,
+           success: function(result)
+           {
+                $('#EntidadeModal').modal('hide');
+                    setTimeout(function(){
+                        $('body').html(result);
+                    }, 150);
+            }      
+         });
+}
+
+function edit(){
+        $.validator.unobtrusive.parse('form[id=editForm]');
+        if ($('form[id=editForm]').valid()) {
+    $.ajax({
+           url: "/entidades/edit",
+           type: "POST",
+           data: $('#editForm').serialize(), // serializes the form's elements.
+           async: true,
+           success: function(result)
+           {
+                $('#EntidadeModal').modal('hide');
+                    setTimeout(function(){
+                        $('div[name=_partialEntidade]').replaceWith(result);
+                    }, 150);
+            }      
+         });
+        }
+}
+</script>
